5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1712_2508.log
== TEST (2019-05-13 15:41:35) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2

while(c<pi):
	e=e+(-1**c+2) * 4/(i*(i+2)*i(i+3)*i(i+4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(-1**c+2) * 4/(i*(i+2)*i(i+3)*i(i+4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:41:59) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2

while(c<pi):
	e=e+(-1** (c+2)) * 4/(i*(i+2)*i(i+3)*i(i+4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(-1** (c+2)) * 4/(i*(i+2)*i(i+3)*i(i+4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:42:22) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2

while(c<pi):
	e=e+(-1* (c+2)) * 4/(i*(i+2)*i(i+3)*i(i+4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(-1* (c+2)) * 4/(i*(i+2)*i(i+3)*i(i+4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:47:56) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e=e+4/(i*(i+2)*i(i+3)*i(i+4))
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(pi,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+4/(i*(i+2)*i(i+3)*i(i+4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:48:11) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e=e+4/(i*(i+2)*i(i+3)*i(i+4))
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+4/(i*(i+2)*i(i+3)*i(i+4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:48:24) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e=e+(4/(i*(i+2)*i(i+3)*i(i+4)))
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(4/(i*(i+2)*i(i+3)*i(i+4)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:07) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e=e+4/(i+2)*(i+3)*(i+4)
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(4/(i*(i+2)*i(i+3)*i(i+4)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:49:51) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e=e+(aux*4/(i+2)*(i+3)*(i+4))
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e=e+(4/(i*(i+2)*i(i+3)*i(i+4)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:50:10) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:50:40) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
	if(aux == 1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:50:54) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
	if(aux=1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux=1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:51:08) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
	if(aux==1):
		aux= -1
		else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:51:14) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
if(aux==1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:51:19) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+2)*(i+3)*(i+4)
	if(aux==1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:52:55) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:11) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
		if(aux==1):
		aux= -1
		else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:29) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
		if(aux == 1):
		aux= -1
		else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:54:12) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux == 1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:54:20) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
if(aux == 1):
		aux= -1
else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:55:34) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
	aux= -1
	else:
	aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:55:55) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
	aux= -1
	else:
	aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:56:24) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux= -1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:56:32) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:56:37) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux==1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:56:50) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	print(round(e,8))
-- OUTPUT:
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:03:49) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+1*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	print(round(e,8))
-- OUTPUT:
27.0
51.0
75.0
99.0
123.0
147.0
171.0
195.0
219.0
243.0
267.0
291.0
315.0
339.0
363.0
387.0
411.0
435.0
459.0
483.0
507.0
531.0
555.0
579.0
603.0
627.0
651.0
675.0
699.0
723.0
747.0
771.0
795.0
819.0
843.0
867.0
891.0
915.0
939.0
963.0
987.0
1011.0
1035.0
1059.0
1083.0
1107.0
1131.0
1155.0
1179.0
1203.0
1227.0
1251.0
1275.0
1299.0
1323.0
1347.0
1371.0
1395.0
1419.0
1443.0
1467.0
1491.0
1515.0
1539.0
1563.0
1587.0
1611.0
1635.0
1659.0
1683.0
1707.0
1731.0
1755.0
1779.0
1803.0
1827.0
1851.0
1875.0
1899.0
1923.0
1947.0
1971.0
1995.0
2019.0
2043.0
2067.0
2091.0
2115.0
2139.0
2163.0
2187.0
2211.0
2235.0
2259.0
2283.0
2307.0
2331.0
2355.0
2379.0
2403.0
2427.0
2451.0
2475.0
2499.0
2523.0
2547.0
2571.0
2595.0
2619.0
2643.0
2667.0
2691.0
2715.0
2739.0
2763.0
2787.0
2811.0
2835.0
2859.0
2883.0
2907.0
2931.0
2955.0
2979.0
3003.0
3027.0
3051.0
3075.0
3099.0
3123.0
3147.0
3171.0
3195.0
3219.0
3243.0
3267.0
3291.0
3315.0
3339.0
3363.0
3387.0
3411.0
3435.0
3459.0
3483.0
3507.0
3531.0
3555.0
3579.0
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:09:38) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+(aux)*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	e=e+1
	print(round(e,8))
-- OUTPUT:
28.0
5.0
30.0
7.0
32.0
9.0
34.0
11.0
36.0
13.0
38.0
15.0
40.0
17.0
42.0
19.0
44.0
21.0
46.0
23.0
48.0
25.0
50.0
27.0
52.0
29.0
54.0
31.0
56.0
33.0
58.0
35.0
60.0
37.0
62.0
39.0
64.0
41.0
66.0
43.0
68.0
45.0
70.0
47.0
72.0
49.0
74.0
51.0
76.0
53.0
78.0
55.0
80.0
57.0
82.0
59.0
84.0
61.0
86.0
63.0
88.0
65.0
90.0
67.0
92.0
69.0
94.0
71.0
96.0
73.0
98.0
75.0
100.0
77.0
102.0
79.0
104.0
81.0
106.0
83.0
108.0
85.0
110.0
87.0
112.0
89.0
114.0
91.0
116.0
93.0
118.0
95.0
120.0
97.0
122.0
99.0
124.0
101.0
126.0
103.0
128.0
105.0
130.0
107.0
132.0
109.0
134.0
111.0
136.0
113.0
138.0
115.0
140.0
117.0
142.0
119.0
144.0
121.0
146.0
123.0
148.0
125.0
150.0
127.0
152.0
129.0
154.0
131.0
156.0
133.0
158.0
135.0
160.0
137.0
162.0
139.0
164.0
141.0
166.0
143.0
168.0
145.0
170.0
147.0
172.0
149.0
174.0
151.0
176.0
153.0
178.0
155.0
180.0
157.0
182.0
159.0
184.0
161.0
186.0
163.0
188.0
165.0
190.0
167.0
192.0
169.0
194.0
171.0
196.0
173.0
198.0
175.0
200.0
177.0
202.0
179.0
204.0
181.0
206.0
183.0
208.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:13:19) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	e=e+1
	print(round(e,8))
-- OUTPUT:
28.0
53.0
78.0
103.0
128.0
153.0
178.0
203.0
228.0
253.0
278.0
303.0
328.0
353.0
378.0
403.0
428.0
453.0
478.0
503.0
528.0
553.0
578.0
603.0
628.0
653.0
678.0
703.0
728.0
753.0
778.0
803.0
828.0
853.0
878.0
903.0
928.0
953.0
978.0
1003.0
1028.0
1053.0
1078.0
1103.0
1128.0
1153.0
1178.0
1203.0
1228.0
1253.0
1278.0
1303.0
1328.0
1353.0
1378.0
1403.0
1428.0
1453.0
1478.0
1503.0
1528.0
1553.0
1578.0
1603.0
1628.0
1653.0
1678.0
1703.0
1728.0
1753.0
1778.0
1803.0
1828.0
1853.0
1878.0
1903.0
1928.0
1953.0
1978.0
2003.0
2028.0
2053.0
2078.0
2103.0
2128.0
2153.0
2178.0
2203.0
2228.0
2253.0
2278.0
2303.0
2328.0
2353.0
2378.0
2403.0
2428.0
2453.0
2478.0
2503.0
2528.0
2553.0
2578.0
2603.0
2628.0
2653.0
2678.0
2703.0
2728.0
2753.0
2778.0
2803.0
2828.0
2853.0
2878.0
2903.0
2928.0
2953.0
2978.0
3003.0
3028.0
3053.0
3078.0
3103.0
3128.0
3153.0
3178.0
3203.0
3228.0
3253.0
3278.0
3303.0
3328.0
3353.0
3378.0
3403.0
3428.0
3453.0
3478.0
3503.0
3528.0
3553.0
3578.0
3603.0
3628.0
3653.0
3678.0
3703.0
3728.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:19:19) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	i=i+1
	print(round(e,8))
-- OUTPUT:
27.0
53.66666667
83.66666667
117.26666667
154.6
195.74285714
240.74285714
289.63174603
342.43174603
399.15901876
459.82568543
524.44107004
593.01249861
665.54583195
742.04583195
822.51642018
906.96086463
995.38191726
1087.78191726
1184.16286964
1284.526506
1388.87433209
1497.20766542
1609.52766542
1725.83535773
1846.13165403
1970.41736831
2098.69323038
2230.95989705
2367.21796156
2507.46796156
2651.71038581
2799.94567992
2952.17425135
3108.39647357
3268.61268979
3432.82321611
3601.02834431
3773.22834431
3949.42346626
4129.61394245
4313.79998896
4501.98180715
4694.15958492
4890.33349797
5090.50371073
5294.6703774
5502.83364271
5714.99364271
5931.15050545
6151.30435161
6375.455295
6603.60344315
6835.7488977
7071.89175484
7312.03210572
7556.17003675
7804.30562997
8056.4389633
8312.57011084
8572.6991431
8836.82612723
9104.95112723
9377.07420415
9653.19541627
9933.31481926
10217.43246632
10505.54840835
10797.66269406
11093.77537012
11393.88648123
11697.99607027
12006.10417838
12318.21084504
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:22:04) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	print(round(e,8))
-- EXECUTION TIME:
715.907
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:22:34) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	print(round(e,8))
-- OUTPUT:
27.0
51.0
75.0
99.0
123.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:23:15) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	print(round(e,8))
-- OUTPUT:
27.0
51.0
75.0
99.0
123.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:24:22) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	print(round(e,8))
-- OUTPUT:
27.0
51.0
75.0
99.0
123.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:24:57) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+aux*4/(i+0)*(i+1)*(i+2)
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	print(round(e,8))
-- OUTPUT:
27.0
3.0
27.0
3.0
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:26:07) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c=0
e=3
i=2
aux=1
while(c<pi):
	e = e+aux*4/(i+2)*(i+3)*(i+4)
	if(aux==1):
		aux=-1
	else:
		aux=1
	c=c+1
	print(round(e,8))
-- OUTPUT:
33.0
3.0
33.0
3.0
33.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:01) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c<pi):
	e = e + (aux * 4 / (i+2) * (i+3) * (i+4))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c = c + 1
	print(round(e,8))
-- OUTPUT:
33.0
3.0
33.0
3.0
33.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:24) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c<pi):
	e = e + (aux * 4 / (i+2) * (i+3) * (i+4))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c = c + 1
	print(round(e,8))
-- OUTPUT:
33.0
3.0
33.0
3.0
33.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:23:23) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c<pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c = c + 1
	print(round(e,8))
-- OUTPUT:
27.0
3.0
27.0
3.0
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:23:38) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c<pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c = c + 1
	print(round(e,8))
-- EXECUTION TIME:
0.214018
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
27.0
3.0
27.0
3.0
27.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
3.0
27.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:24:14) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux = =1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- ERROR:
File "XXXX", line 9
    if(aux = =1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:24:26) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    e = e + (aux * (4 / 2 * 3 * 4))
NameError: name 'aux' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:24:53) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:25:04) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:25:17) 
-- CODE:
from math import*
pi=float(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- EXECUTION TIME:
0.128584
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
27.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.0
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
27.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:25:29) 
-- CODE:
from math import*
pi=eval(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:25:52) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
e = 3
i = 2
aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:26:30) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
e = 3
i = 2
aux = 2
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
51.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:26:44) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
e = 3
i = 2
aux = 0
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:27:00) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
e = 3

aux = 1
while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:28:45) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
d = 0
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:28:58) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
d = 1
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:29:44) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 2
d = 1
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:29:59) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 1
d = 1
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:30:11) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 3
d = 1
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:33:12) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
d = 0
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:34:24) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
d = 0
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
	d = d + 2
print(round(e,8))
-- OUTPUT:
27.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:34:33) 
-- CODE:
from math import*
pi= int(input("Pi: "))
c = 0
d = 0
e = 3
aux = 1

while(c < pi):
	e = e + (aux * (4 / 2 * 3 * 4))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	c = c + 1
	d = d + 2
print(round(e,8))
-- EXECUTION TIME:
0.206302
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
27.0
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.0
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
27.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:34:43) 
-- CODE:
from math import*
n = int(input("Pi: "))
c = 0
d = 0
e = 0
aux = 1-
while(c<n):
	if(c==0):
		e= e+3
	else:
		e=e + (aux * (4/(d*(d+1)*(d2))))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c= c+1
	d= d+2
print(round(e,8))
-- EXECUTION TIME:
0.141623
-- ERROR:
  File "/home/codebench/codes/1712/2508/main.py", line 6
    aux = 1-
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:34:50) 
-- CODE:
from math import*
n = int(input("Pi: "))
c = 0
d = 0
e = 0
aux = 1-
while(c<n):
	if(c==0):
		e= e+3
	else:
		e=e + (aux * (4/(d*(d+1)*(d2))))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c= c+1
	d= d+2
print(round(e,8))
-- ERROR:
File "XXXX", line 6
    aux = 1-
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:35:25) 
-- CODE:
from math import*
n = int(input("Pi: "))
c = 0
d = 0
e = 0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e=e + (aux * (4/(d*(d+1)*(d2))))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c= c+1
	d= d+2
print(round(e,8))
-- EXECUTION TIME:
0.134068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2508/main.py", line 11, in <module>
    e=e + (aux * (4/(d*(d+1)*(d2))))
NameError: name 'd2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:35:47) 
-- CODE:
from math import*
n = int(input("Pi: "))
c = 0
d = 0
e = 0
aux = -1
while(c<n):
	if(c==0):
		e= e+3
	else:
		e=e + (aux * (4/(d*(d+1)*(d+2))))
	if(aux==1):
		aux=-1
	else:
		aux=1
	c= c+1
	d= d+2
print(round(e,8))
-- EXECUTION TIME:
0.157046
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
